--- a/c01/ex06/Makefile
+++ b/c01/ex06/Makefile
@@ -2,16 +2,16 @@ SRC=    Karen.cpp main.cpp\
 
 OBJS			= $(SRC:.cpp=.o)
 
-NAME			= karen
+NAME			= karenFilter
 
-CFLAGS			= -Wall -Wextra -Werror
+CFLAGS			= -Wall -Wextra -Werror -std=c++98
 
 RM				= rm -f
 
 CC				= clang++
 
-.c.o:
-				$(CC) $(CFLAGS) -c $< -o $(<:.cpp=.o)
+%.o : %.cpp
+				$(CC) $(CFLAGS) -c $< -o $@
 
 $(NAME):		$(OBJS)
 				$(CC) $(CFLAGS) $(OBJS) -o $(NAME) -L.
